--- a/application/flicket/templates/email_password_reset.html
+++ b/application/flicket/templates/email_password_reset.html
@@ -5,10 +5,9 @@
         {{ title }}
     </h1>
     <p>
-        Your new password is: {{ new_password }}.
+        Tu nueva contraseña es: {{ new_password }}.
     </p>
     <p>
-        Once you have logged in please change your password as soon as possible. Your password is not secure until you
-        do so.
+        Una vez que haya iniciado sesión, cambie su contraseña lo antes posible. Su contraseña no es segura hasta que usted lo haga.
     </p>
 {% endblock %}
