--- a/application/flicket/templates/email_ticket_release.html
+++ b/application/flicket/templates/email_ticket_release.html
@@ -5,7 +5,7 @@
         {{ title }}
     </h1>
     <p>
-        {{ _('Ticket has been released. Ticket is now no longer assigned to anyone. Ticket:') }} <a href="{{ ticket_url }}">{{ number }}</a>
+        {{ _('El ticket ha sido liberado. El ticket ya no está asignado a nadie. Ticket:') }} <a href="{{ ticket_url }}">{{ number }}</a>
     </p>
     {% include('email_include_details.html') %}
 
