--- a/application/flicket/templates/flicket_assign.html
+++ b/application/flicket/templates/flicket_assign.html
@@ -18,7 +18,7 @@
 
                 <div class="row mb-2">
                     <div class="col">
-                        {{ _('Type name and pick from drop down list to assign ticket. ') }}
+                        {{ _('Escriba el nombre y elija de la lista desplegable para asignar el ticket.') }}
                         <a href="{{ url_for('flicket_bp.flicket_users') }}" target="_blank">
                             Available users
                         </a>
