--- a/application/flicket/templates/flicket_categories.html
+++ b/application/flicket/templates/flicket_categories.html
@@ -15,7 +15,7 @@
             <div class="col">
                 <div class="row">
                     <div class="col">
-                        <h3><span class="small">Department:</span> {{ department.department }}</h3>
+                        <h3><span class="small">Departmento:</span> {{ department.department }}</h3>
                     </div>
                 </div>
                 <form action=""
@@ -49,7 +49,7 @@
         <div class="row m-2 p-2 border rounded bg-white">
             <div class="col">
                 <div class="row">
-                    <div class="col"><h3>{{ _('Existing Categories') }}</h3></div>
+                    <div class="col"><h3>{{ _('Categorias existentes') }}</h3></div>
                 </div>
                 {% for c in categories %}
                     <div class="row">
