--- a/application/flicket/templates/flicket_category_edit.html
+++ b/application/flicket/templates/flicket_category_edit.html
@@ -12,7 +12,7 @@
             <div class="col">
 
                 <div class="row mb-1">
-                    <div class="col">{{ _('Department') }}: {{ department }}</div>
+                    <div class="col">{{ _('Departamento') }}: {{ department }}</div>
                 </div>
                 <form action=""
                       class="form-horizontal"
@@ -21,7 +21,7 @@
                       name="create_ticket">
                     {{ form.hidden_tag() }}
                     <div class="row">
-                        <label class="sr-only">{{ _('Category') }}</label>
+                        <label class="sr-only">{{ _('Categoria') }}</label>
                         <div class="col">
                             {{ form.category(class="form-control form-control-sm", title="category") }}
                         </div>
