--- a/application/flicket/templates/flicket_delete.html
+++ b/application/flicket/templates/flicket_delete.html
@@ -19,7 +19,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <label class="col col-form-label">{{ _('Password') }}</label>
+                        <label class="col col-form-label">{{ _('Contraseña') }}</label>
                         <div class="col-5">
                             {{ form.password(class="form-control form-control-sm") }}
                         </div>
