--- a/application/flicket/templates/flicket_department_edit.html
+++ b/application/flicket/templates/flicket_department_edit.html
@@ -18,7 +18,7 @@
                   name="create_ticket">
                 {{ form.hidden_tag() }}
                 <label class="col-3 col-form-label">
-                    {{ _('Department') }}
+                    {{ _('Departmento') }}
                 </label>
                 <div class="col-5 mr-2">
                     {{ form.department(class="form-control form-control-sm") }}
