--- a/application/flicket/templates/flicket_departments.html
+++ b/application/flicket/templates/flicket_departments.html
@@ -5,7 +5,7 @@
         <div class="row bg-white m-2 border round">
             <div class="col">
                 <h1>{{ title }}</h1>
-                <p>{{ _('If you require new departments and / or categories added / deleted, please raise a ticket.') }}</p>
+                <p>{{ _('Si requieres añadir un departamento y / o añadir / eliminar categorias, por favor crea un ticket.') }}</p>
             </div>
         </div>
 
@@ -80,10 +80,10 @@
             <div class="col">
                 <div class="row border-bottom p-2">
                     <div class="col">
-                        {{ _('Department') }}
+                        {{ _('Departmento') }}
                     </div>
                     <div class="col">
-                        {{ _('Categories') }}
+                        {{ _('Categorias') }}
                     </div>
                 </div>
                 {%- for d in departments.items -%}
