--- a/application/flicket/templates/flicket_edituser.html
+++ b/application/flicket/templates/flicket_edituser.html
@@ -11,14 +11,14 @@
 
                     <div class="row">
                         <div class="col">
-                            <h1 class="text-center">{{ title }}</h1>
+                            <h1 class="text-center">{{ tittle }}</h1>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col">
                             <p class="offset-3">
-                                You can't edit your user name / login id:
+                                No puedes editar tu nombre de Usuario:
                                 <span class="amber_span">{{ g.user.username }}</span>.
                             </p>
                         </div>
@@ -140,7 +140,7 @@
                     <div class="row mt-3">
                         <div class="col">
                             <p class="alert alert-warning">
-                                {{ _('Enter details below only if you want to change your password.') }}
+                                {{ _('Introduce los detalles aquí si quieres cambiar tu contraseña.') }}
                             </p>
                         </div>
                     </div>
