--- a/application/flicket/templates/flicket_navbar.html
+++ b/application/flicket/templates/flicket_navbar.html
@@ -12,25 +12,25 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownn" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Tickets</a>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownn" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mis Tickets</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownn">
-                    <a class="dropdown-item" href="{{ url_for('flicket_bp.my_tickets') }}" title="Tickets assigned to or started by you.">{{ _('My Tickets') }}</a>
-                    <a class="dropdown-item" href="{{ url_for('flicket_bp.my_tickets', created_id=g.user.id) }}" title="Tickets started by you.">{{ _('Created') }}</a>
-                    <a class="dropdown-item" href="{{ url_for('flicket_bp.my_tickets', assigned_id=g.user.id) }}" title="Tickets assigned to you.">{{ _('Assigned') }}</a>
-                    <a class="dropdown-item" href="{{ url_for('flicket_bp.subscribed') }}" title="Tickets you are subscribed to.">{{ _('Subscribed') }}</a>
+                    <a class="dropdown-item" href="{{ url_for('flicket_bp.my_tickets') }}" title="Tickets assigned to or started by you.">{{ _('Mis Tickets') }}</a>
+                    <a class="dropdown-item" href="{{ url_for('flicket_bp.my_tickets', created_id=g.user.id) }}" title="Tickets started by you.">{{ _('Creados') }}</a>
+                    <a class="dropdown-item" href="{{ url_for('flicket_bp.my_tickets', assigned_id=g.user.id) }}" title="Tickets assigned to you.">{{ _('Asignados') }}</a>
+                    <a class="dropdown-item" href="{{ url_for('flicket_bp.subscribed') }}" title="Tickets you are subscribed to.">{{ _('Suscrito') }}</a>
                 </div>
             </li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('flicket_bp.tickets') }}">{{ _('Tickets') }}</a>
             </li>
             <li class="nav-item"><a class="nav-link"
-                                    href="{{ url_for('flicket_bp.ticket_create') }}">{{ _('Create Ticket') }}</a></li>
+                                    href="{{ url_for('flicket_bp.ticket_create') }}">{{ _('Crear Ticket') }}</a></li>
             <li class="nav-item"><a class="nav-link"
-                                    href="{{ url_for('flicket_bp.departments') }}">{{ _('Departments') }}</a></li>
+                                    href="{{ url_for('flicket_bp.departments') }}">{{ _('Departamentos') }}</a></li>
             <li class="nav-item"><a class="nav-link"
-                                    href="{{ url_for('flicket_bp.flicket_users') }}">{{ _('Users') }}</a></li>
+                                    href="{{ url_for('flicket_bp.flicket_users') }}">{{ _('Usuarios') }}</a></li>
             {% if g.user.is_admin %}
                 <li class="nav-item"><a class="nav-link"
-                                        href="{{ url_for('admin_bp.index') }}">{{ _('Admin View') }}</a></li>
+                                        href="{{ url_for('admin_bp.index') }}">{{ _('Vista de Administrador') }}</a></li>
             {% endif %}
         </ul>
 
@@ -44,7 +44,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href=" {{ url_for('flicket_bp.user_details') }} ">
                             <span class="oi oi-person pr-2" title="person"
-                                  aria-hidden="true"></span> {{ _('User Details') }}
+                                  aria-hidden="true"></span> {{ _('Detalles del Usuario') }}
                         </a>
                         <a class="dropdown-item" href="{{ url_for('flicket_bp.logout') }}">
                             <span class="oi oi-account-logout pr-2" title="person"
