--- a/application/flicket/templates/403.html
+++ b/application/flicket/templates/403.html
@@ -3,6 +3,6 @@
 {% block content %}
 <div class="container">
     <h1>{{ _('403 Error - Forbidden') }}</h1>
-    <p>{{ _('Sorry, you don\'t have permission to access this resource.') }}</p>
+    <p>{{ _('No tienes permisos para acceder a este recurso') }}</p>
 </div>
 {% endblock %}
