--- a/application/flicket/templates/500.html
+++ b/application/flicket/templates/500.html
@@ -2,14 +2,14 @@
 <!-- extend base layout -->
 {% block content %}
 <div class="container">
-    <h1>{{ _('An unexpected error has occurred') }}</h1>
+    <h1>{{ _('A ocurrido un error inesperado') }}</h1>
     <p>
-        {{ _('Please report this error to your administrator. Please provide the following details:') }}
+        {{ _('Reporta este error a tu administrador. Entrega los siguientes detalles:') }}
     </p>
     <ul>
-        <li>{{ _('Page you were navigating.') }}</li>
-        <li>{{ _('Time you saw this error.') }}</li>
-        <li>{{ _('Any other information that may help reproduce the error.') }}</li>
+        <li>{{ _('Pagina a la cual navegabas') }}</li>
+        <li>{{ _('Momento en el que viste el error.') }}</li>
+        <li>{{ _('Otra informacion adicional con la cual se haya producido el error.') }}</li>
     </ul>
     <p><a href="{{ url_for('flicket_bp.index') }}">{{ _('Back') }}</a></p>
 </div>
