--- a/application/flicket/templates/email_footer.html
+++ b/application/flicket/templates/email_footer.html
@@ -1,6 +1,6 @@
 <!-- email_footer -->
 <p style="font-size: 8pt; margin-top: 20pt">
-    Flicket {{ g.__version__ }} &copy; {{ now_year() }} |
-    {{ _('Source code available at:') }} <a href="https://github.com/evereux/flicket">Github</a>.
+    EasyTicket {{ g.__version__ }} &copy; {{ now_year() }} |
+    {{ _('Raiz del codigo en:') }} <a href="https://github.com/abelarismendy/onnet-ticket">Github</a>.
 </p>
 <!-- end email_footer -->
