--- a/application/flicket/templates/email_test.html
+++ b/application/flicket/templates/email_test.html
@@ -2,9 +2,9 @@
 <!-- extend from base layout -->
 {% block content %}
     <h1>
-        Flicket test email.
+        EasyTicket test email.
     </h1>
     <p>
-        The flicket email settings appear to be working. Excellent.
+        The EasyTicket email settings appear to be working. Excellent.
     </p>
 {% endblock %}
