--- a/application/flicket/templates/email_ticket_assign.html
+++ b/application/flicket/templates/email_ticket_assign.html
@@ -5,7 +5,7 @@
         {{ title }}
     </h1>
     <p>
-        {{ ticket.assigned.name }} {{ _('has been assigned to ticket:') }} <a href="{{ ticket_url }}">{{ number }}</a>
+        {{ ticket.assigned.name }} {{ _('ha sido asignado al ticket:') }} <a href="{{ ticket_url }}">{{ number }}</a>
     </p>
     {% include('email_include_details.html') %}
 
