--- a/application/flicket/templates/email_ticket_create.html
+++ b/application/flicket/templates/email_ticket_create.html
@@ -5,7 +5,7 @@
         {{ title }}
     </h1>
     <p>
-        {{ _('You have successfully created a new ticket:') }} <a href="{{ ticket_url }}">{{ number }}</a>
+        {{ _('Ha creado exitosamente un nuevo ticket:') }} <a href="{{ ticket_url }}">{{ number }}</a>
     </p>
     {% include('email_include_details.html') %}
     <h2>{{ _('Content') }}</h2>
