--- a/application/flicket/templates/email_ticket_department_category.html
+++ b/application/flicket/templates/email_ticket_department_category.html
@@ -5,7 +5,7 @@
         {{ title }}
     </h1>
     <p>
-    {{ _('Department') }} / {{_('Category') }} "{{ ticket.department_category }}" {{ _('has been assigned to ticket:') }} <a href="{{ ticket_url }}">{{ number }}</a>
+    {{ _('Departamento') }} / {{_('Categoria') }} "{{ ticket.department_category }}" {{ _('ha sido asignado al ticket:') }} <a href="{{ ticket_url }}">{{ number }}</a>
     </p>
     {% include('email_include_details.html') %}
 
