--- a/application/flicket/templates/flicket_deletepost.html
+++ b/application/flicket/templates/flicket_deletepost.html
@@ -12,7 +12,7 @@
                     </div>
                 </div>
 
-                <p><b>post_id:</b> {{ post.id }} | <b>content:</b> {{ post.content }}</p>
+                <p><b>post_id:</b> {{ post.id }} | <b>contenido:</b> {{ post.content }}</p>
 
                 <form class="form-horizontal" action="" method="post" name="create_ticket">
                     {{ form.hidden_tag() }}
