--- a/application/flicket/templates/flicket_form_reply.html
+++ b/application/flicket/templates/flicket_form_reply.html
@@ -36,12 +36,12 @@
             <div class="row mt-1">
                 <div class="col offset-2">
                     <a class="small" href="{{ url_for('flicket_bp.markdown_primer') }}" target="_blank">
-                        {{ _('MarkDown Help') }}
+                        {{ _('Ayuda con MarkDown') }}
                     </a>
                 </div>
                 <div class="col text-right">
                     <button type="button" class="btn btn-info btn-sm" onclick="hide_element()">
-                        {{ _('Show / Hide Markdown') }}
+                        {{ _('Mostrar / Ocultar Markdown') }}
                     </button>
                 </div>
             </div>
