--- a/application/flicket/templates/flicket_password_reset.html
+++ b/application/flicket/templates/flicket_password_reset.html
@@ -12,7 +12,7 @@
                 <div class="col-sm-6">
 
                     {{ form.hidden_tag() }}
-                    <label class="col-sm-3 control-label">{{ _('Email Address') }}</label>
+                    <label class="col-sm-3 control-label">{{ _('Correo Electrónico') }}</label>
                     <div class="col-sm-9">
                         {{ form.email(class="form-control") }}
                     </div>
