--- a/application/flicket/templates/markdown_primer.html
+++ b/application/flicket/templates/markdown_primer.html
@@ -1,126 +1,126 @@
 {% extends "flicket_base.html" %}
-<!-- extend from base layout -->
+<!-- extender desde el diseño base -->
 {% block content %}
     <!-- {{ self._TemplateReference__context.name }} -->
     <div class="container">
 
-        <h1>Flicket Markdown Help</h1>
+        <h1>Ayuda de Markdown en Flicket</h1>
 
         <p>
-            Markdown is a lightweight markup language with plain text formatting syntax.
+            Markdown es un lenguaje de marcado ligero con sintaxis de formato de texto plano.
         </p>
 
         <table class="table table-striped table-responsive">
             <tr>
-                <th>Type</th>
-                <th>Syntax</th>
-                <th>Example</th>
-                <th>Output</th>
+                <th>Tipo</th>
+                <th>Sintaxis</th>
+                <th>Ejemplo</th>
+                <th>Resultado</th>
             </tr>
             <tr>
-                <td>Heading 1
-                <td># Heading 1</td>
+                <td>Título 1
+                <td># Título 1</td>
                 <td>
-                    <pre># Heading 1</pre>
+                    <pre># Título 1</pre>
                 </td>
                 <td>
-                    <h1>Heading 1</h1>
-                </td>
-            </tr>
-            <tr>
-                <td>Heading 2
-                <td>## Heading 2</td>
-                <td>
-                    <pre>## Heading 2</pre>
-                </td>
-                <td>
-                    <h2>Heading 2</h2>
+                    <h1>Título 1</h1>
                 </td>
             </tr>
             <tr>
-                <td>Heading 3
-                <td>### Heading 3</td>
+                <td>Título 2
+                <td>## Título 2</td>
                 <td>
-                    <pre>### Heading 3</pre>
+                    <pre>## Título 2</pre>
                 </td>
                 <td>
-                    <h3>Heading 3</h3>
+                    <h2>Título 2</h2>
                 </td>
             </tr>
             <tr>
-                <td>Paragraphs / New Lines
+                <td>Título 3
+                <td>### Título 3</td>
+                <td>
+                    <pre>### Título 3</pre>
+                </td>
+                <td>
+                    <h3>Título 3</h3>
+                </td>
+            </tr>
+            <tr>
+                <td>Párrafos / Saltos de línea
                 <td></td>
                 <td>
-              <pre>This is the first line.
-The second line must be followed by two carriage returns.
+              <pre>Esta es la primera línea.
+La segunda línea debe ir seguida de dos saltos de línea.
 
-This is the second line.</pre>
+Esta es la segunda línea.</pre>
                 </td>
-                <td>This is the first line. The second line must be followed by two carriage returns.<br><br>This is the
-                    second
-                    line.
+                <td>Esta es la primera línea. La segunda línea debe ir seguida de dos saltos de línea.<br><br>Esta es la
+                    segunda
+                    línea.
                 </td>
             </tr>
             <tr>
-                <td>Bold</td>
+                <td>Negrita</td>
                 <td>** **</td>
                 <td>
-                    <pre>some **bold** text</pre>
+                    <pre>texto **negrita**</pre>
                 </td>
-                <td>some <strong>bold</strong> text</td>
+                <td>texto <strong>negrita</strong></td>
             </tr>
             <tr>
-                <td>Italic</td>
+                <td>Cursiva</td>
                 <td>_ _</td>
                 <td>
-                    <pre>some _italic_ text</pre>
+                    <pre>texto _cursiva_</pre>
                 </td>
-                <td>some <i>italic</i> text</td>
+                <td>texto <i>cursiva</i></td>
             </tr>
             <tr>
-                <td>Hyperlink</td>
-                <td nowrap="nowrap">[Link](http://a.com)</td>
+                <td>Enlace</td>
+                <td nowrap="nowrap">[Enlace](http://a.com)</td>
                 <td>
-                    <pre>Visit [Link](https://google.com) for more information.</pre>
+                    <pre>Visita [Enlace](https://google.com) para obtener más información.</pre>
                 </td>
-                <td>Visit <a href="https://google.com">google</a> for more information.</td>
+                <td>Visita <a href="https://google.com">google</a> para obtener más información.</td>
             </tr>
             <tr>
-                <td>Image</td>
-                <td nowrap="nowrap">![Image](http://url/a.png)</td>
+                <td>Imagen</td>
+                <td nowrap="nowrap">![Imagen](http://url/a.png)</td>
                 <td>
-                    <pre>![Image](https://commonmark.org/help/images/favicon.png)</pre>
+                    <pre>![Imagen](https://commonmark.org/help/images/favicon.png)</pre>
                 </td>
                 <td><img alt="favicon" src="https://commonmark.org/help/images/favicon.png"></td>
             </tr>
             <tr>
-                <td>List Item</td>
-                <td>* list item 1</td>
-                <td><pre>* list item 1
-* list item 2</pre>
+                <td>Elemento de lista</td>
+                <td>* elemento de lista 1</td>
+                <td><pre>* elemento de lista 1
+* elemento de lista 2</pre>
                 </td>
                 <td>
                     <ul>
-                        <li>list item 1</li>
-                        <li>list item 2</li>
+                        <li>elemento de lista 1</li>
+                        <li>elemento de lista 2</li>
                     </ul>
                 </td>
             </tr>
             <tr>
-                <td>Ordered List Item</td>
-                <td>1. list item 1</td>
-                <td><pre>1. list item 1
-2. list item 2</pre>
+                <td>Elemento de lista ordenada</td>
+                <td>1. elemento de lista 1</td>
+                <td><pre>1. elemento de lista 1
+2. elemento de lista 2</pre>
                 </td>
                 <td>
                     <ol>
-                        <li>list item 1</li>
-                        <li>list item 2</li>
+                        <li>elemento de lista 1</li>
+                        <li>elemento de lista 2</li>
                     </ol>
                 </td>
             </tr>
             <tr>
-                <td>Horizontal Rule</td>
+                <td>Línea horizontal</td>
                 <td>____</td>
                 <td>
                     <pre>____</pre>
@@ -130,25 +130,25 @@ This is the second line.</pre>
                 </td>
             </tr>
             <tr>
-                <td>Inline Code</td>
+                <td>Código en línea</td>
                 <td>` `</td>
                 <td>
-                    <pre>this is some `inline code`.</pre>
+                    <pre>esto es algún `código en línea`.</pre>
                 </td>
                 <td>
-                    this is some <code>inline code</code>.
+                    esto es algún <code>código en línea</code>.
                 </td>
             </tr>
             <tr>
-                <td>Code Block</td>
-                <td>indent 4 spaces</td>
+                <td>Bloque de código</td>
+                <td>indentar 4 espacios</td>
                 <td>
-            <pre>    code block line 1
-    code block line 2</pre>
+            <pre>    línea de bloque de código 1
+    línea de bloque de código 2</pre>
                 </td>
                 <td>
-            <pre><code>code block line 1
-code block line 2</code></pre>
+            <pre><code>línea de bloque de código 1
+línea de bloque de código 2</code></pre>
                 </td>
             </tr>
         </table>
